workStyle:テキスト変更

--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -13,20 +13,32 @@
             ・点検などの準備 </p>
       </div>
       <div class="p-history__unit">
-        <p class="p-history__date">1978年8月</p>
-        <p class="p-history__text"> 本社を東京都福生市に移転。SP商品製造販売業を開始。 </p>
+        <p class="p-history__date">乗務開始</p>
+        <p class="p-history__text"> 
+          ・点検が完了次第、乗務開始です
+          ・待機場へ向かいます
+          無線配車数が業界トップクラスのため、無線だけでも安定した売上を上げられます。 </p>
       </div>
       <div class="p-history__unit">
-        <p class="p-history__date">1981年5月</p>
-        <p class="p-history__text"> 有限会社　タカショウ設立 </p>
+        <p class="p-history__date">午前のピークの時間</p>
+        <p class="p-history__text"> 朝から昼前にかけては病院までお送りするお客様が多くいらっしゃる時間帯です。</p>
       </div>
       <div class="p-history__unit">
-        <p class="p-history__date">2003年1月</p>
-        <p class="p-history__text"> 本社を東京都昭島市拝島町に移転 </p>
+        <p class="p-history__date">昼食</p>
+        <p class="p-history__text"> 昼食の時間は決められておらず、自分の決めた好きなタイミングで昼食を取ります。 </p>
       </div>
       <div class="p-history__unit">
-        <p class="p-history__date">2020年2月</p>
-        <p class="p-history__text"> 創業50周年を迎える </p>
+        <p class="p-history__date">休憩</p>
+        <p class="p-history__text"> 休憩は合計で3時間あります。自身で調整していただけます。</p>
+      </div>
+      <div class="p-history__unit">
+        <p class="p-history__date">午後のピークの時間帯</p>
+        <p class="p-history__text"> 夕方から夜にかけては、帰宅などご利用するお客様が多くいらっしゃる頑張る時間帯です。</p>
+      </div>
+      <div class="p-history__unit">
+        <p class="p-history__date">退社</p>
+        <p class="p-history__text"> 23:00~26:00の間で出勤時間に応じて
+          退社します。</p>
       </div>
     </div>
   </div>
