--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -4,48 +4,46 @@
     <h2 class="p-workStyle__title">隔日勤務/12日勤務</h2>
     <span class="p-workStyle__subtitle">時間を優先したい人の働き方</span>
   </div>
-  <div class="p-history__main">
-    <div class="p-history__units">
-      <div class="p-history__unit">
-        <img src="images/environment/workStyle_time730.png" alt="7:30">
-          <p class="p-history__date">出社</p>
-          <p class="p-history__text"> 6:00〜8:00の間で自由に出社時間を選べます。<br>
-            ・点検などの準備 </p>
-      </div>
-      <div class="p-history__unit">
-        <img src="images/environment/workStyle_time800.png" alt="8:00">
-        <p class="p-history__date">乗務開始</p>
-        <p class="p-history__text"> 
-          ・点検が完了次第、乗務開始です
-          ・待機場へ向かいます
-          無線配車数が業界トップクラスのため、無線だけでも安定した売上を上げられます。 </p>
-      </div>
-      <div class="p-history__unit">
-        <img src="images/environment/workStyle_time800-1100.png" alt="8:00~11:00">
-        <p class="p-history__date">午前のピークの時間</p>
-        <p class="p-history__text"> 朝から昼前にかけては病院までお送りするお客様が多くいらっしゃる時間帯です。</p>
-      </div>
-      <div class="p-history__unit">
-        <img src="images/environment/workStyle_time1200.png" alt="12:00">
-        <p class="p-history__date">昼食</p>
-        <p class="p-history__text"> 昼食の時間は決められておらず、自分の決めた好きなタイミングで昼食を取ります。 </p>
-      </div>
-      <div class="p-history__unit">
-        <img src="images/environment/workStyle_time1500.png" alt="15:00">
-        <p class="p-history__date">休憩</p>
-        <p class="p-history__text"> 休憩は合計で3時間あります。自身で調整していただけます。</p>
-      </div>
-      <div class="p-history__unit">
-        <img src="images/environment/workStyle_time1600-2000.png" alt="16:00~20:00">
-        <p class="p-history__date">午後のピークの時間帯</p>
-        <p class="p-history__text"> 夕方から夜にかけては、帰宅などご利用するお客様が多くいらっしゃる頑張る時間帯です。</p>
-      </div>
-      <div class="p-history__unit">
-        <img src="images/environment/workStyle_time2530.png" alt="25:30">
-        <p class="p-history__date">退社</p>
-        <p class="p-history__text"> 23:00~26:00の間で出勤時間に応じて
-          退社します。</p>
-      </div>
+  <div class="p-workStyle__units">
+    <div class="p-workStyle__unit">
+      <img src="images/environment/workStyle_time730.png" alt="7:30">
+      <p class="p-workStyle__unitTitle">出社</p>
+      <p class="p-workStyle__unitText"> 6:00〜8:00の間で自由に出社時間を選べます。<br>
+        ・点検などの準備 </p>
+    </div>
+    <div class="p-workStyle__unit">
+      <img src="images/environment/workStyle_time800.png" alt="8:00">
+      <p class="p-workStyle__unitTitle">乗務開始</p>
+      <p class="p-workStyle__unitText">
+        ・点検が完了次第、乗務開始です
+        ・待機場へ向かいます
+        無線配車数が業界トップクラスのため、無線だけでも安定した売上を上げられます。 </p>
+    </div>
+    <div class="p-workStyle__unit">
+      <img src="images/environment/workStyle_time800-1100.png" alt="8:00~11:00">
+      <p class="p-workStyle__unitTitle">午前のピークの時間</p>
+      <p class="p-workStyle__unitText"> 朝から昼前にかけては病院までお送りするお客様が多くいらっしゃる時間帯です。</p>
+    </div>
+    <div class="p-workStyle__unit">
+      <img src="images/environment/workStyle_time1200.png" alt="12:00">
+      <p class="p-workStyle__unitTitle">昼食</p>
+      <p class="p-workStyle__unitText"> 昼食の時間は決められておらず、自分の決めた好きなタイミングで昼食を取ります。 </p>
+    </div>
+    <div class="p-workStyle__unit">
+      <img src="images/environment/workStyle_time1500.png" alt="15:00">
+      <p class="p-workStyle__unitTitle">休憩</p>
+      <p class="p-workStyle__unitText"> 休憩は合計で3時間あります。自身で調整していただけます。</p>
+    </div>
+    <div class="p-workStyle__unit">
+      <img src="images/environment/workStyle_time1600-2000.png" alt="16:00~20:00">
+      <p class="p-workStyle__unitTitle">午後のピークの時間帯</p>
+      <p class="p-workStyle__unitText"> 夕方から夜にかけては、帰宅などご利用するお客様が多くいらっしゃる頑張る時間帯です。</p>
+    </div>
+    <div class="p-workStyle__unit">
+      <img src="images/environment/workStyle_time2530.png" alt="25:30">
+      <p class="p-workStyle__unitTitle">退社</p>
+      <p class="p-workStyle__unitText"> 23:00~26:00の間で出勤時間に応じて
+        退社します。</p>
     </div>
   </div>
 </div>
