workstyle:PCタイム修正

--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -15,9 +15,10 @@
       <img src="images/environment/workStyle_time800.png" alt="8:00">
       <p class="p-workStyle__unitTitle">乗務開始</p>
       <p class="p-workStyle__unitText">
-        ・点検が完了次第、乗務開始です
-        ・待機場へ向かいます
-        無線配車数が業界トップクラスのため、無線だけでも安定した売上を上げられます。 </p>
+        ・点検が完了次第、乗務開始です<br>
+        ・待機場へ向かいます<br>
+        <span>無線配車数が業界トップクラス</span>
+        のため、無線だけでも安定した売上を上げられます。 </p>
     </div>
     <div class="p-workStyle__unit">
       <img src="images/environment/workStyle_time800-1100.png" alt="8:00~11:00">
