--- a/src/sass/object/project/_p-workStyle.scss
+++ b/src/sass/object/project/_p-workStyle.scss
@@ -68,6 +68,10 @@
   }
 }
 
+.p-workStyle__unit:nth-child(even) {
+  margin-left: 0;
+}
+
 .p-workStyle__unit img {
   position: absolute;
   top: 0;
@@ -78,15 +82,18 @@
   background-color: $yellow;
 
   @include mq('md') {
-    bottom: -0.3125rem;
-    height: 0.625rem;
-    left: calc(5% - 0.3125rem);
-    width: 0.625rem;
+    width: rem(100);
+    height: rem(100);
+    // bottom: -0.3125rem;
+    left: rem(-50);
   }
 }
 
-.p-workStyle__unit:nth-child(even) {
-  margin-left: 0;
+.p-workStyle__unit:nth-child(even) img {
+  @include mq('md') {
+    left: initial;
+    right: rem(-50);
+  }
 }
 
 .p-workStyle__unitTitle {
@@ -95,11 +102,14 @@
   align-items: center;
   padding: rem(27.5) 0 0 rem(78);
   margin: 0;
-  color: $black;
-  line-height: 1;
+  line-height: 1.23529;
   font-weight: bold;
-  font-size: 1.25rem;
+  font-size: rem(17);
 
+  @include mq('md') {
+    line-height: 1.75;
+    font-size: rem(24);
+  }
 }
 
 .p-workStyle__unitTitle::before {
@@ -118,11 +128,17 @@
   }
 }
 
-
 .p-workStyle__unitText {
   margin-top: rem(5);
   padding: 0 0 0 rem(78 + 30 + 7.35);
-  margin: 0;
   line-height: 1.5;
-  font-size: 1rem;
+  font-size: rem(11);
+
+  @include mq('md') {
+    font-size: rem(18);
+  }
+}
+
+.p-workStyle__unitText span {
+  background-color: $yellow;
 }
