workstyle:カレンダー追加

--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -47,4 +47,21 @@
         退社します。</p>
     </div>
   </div>
+
+  <div class="p-workStyle__calendar">
+    <div class="p-workStyle__calendarHeader">
+      <h3 class="p-workStyle__subtitle">1ヶ月の勤務イメージ</h3>
+    </div>
+    <div class="p-workStyle__calendarContents">
+    <picture class="p-workStyle__calendarImg">
+      <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_01_pc.png" />
+      <img src="images/environment/workStyle__calendar_01.png" alt="" loading="lazy">
+    </picture>
+    <div class="p-workStyle__calendarDescription">
+
+    </div>
+  </div>
+  </div>
+
+
 </div>
