workstyle:アイコン説明追加

--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -2,7 +2,7 @@
 
   <div class="p-workStyle__section-header">
     <h2 class="p-workStyle__title">隔日勤務/12日勤務</h2>
-    <span class="p-workStyle__subtitle">時間を優先したい人の働き方</span>
+    <span class="p-yellowTitle">時間を優先したい人の働き方</span>
   </div>
   <div class="p-workStyle__units">
     <div class="p-workStyle__unit">
@@ -48,19 +48,20 @@
     </div>
   </div>
 
-  <div class="p-workStyle__calendar">
-    <div class="p-workStyle__calendarHeader">
-      <h3 class="p-workStyle__subtitle">1ヶ月の勤務イメージ</h3>
+  <div class="p-workStyle__calendar p-calendar">
+    <div class="p-calendar__titleWrapper">
+      <h3 class="p-yellowTitle">1ヶ月の勤務イメージ</h3>
     </div>
-    <div class="p-workStyle__calendarContents">
-    <picture class="p-workStyle__calendarImg">
-      <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_01_pc.png" />
-      <img src="images/environment/workStyle__calendar_01.png" alt="" loading="lazy">
-    </picture>
-    <div class="p-workStyle__calendarDescription">
-
+    <div class="p-calendar__contents">
+      <picture class="p-calendar__calendarImg">
+        <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_01_pc.png" />
+        <img src="images/environment/workStyle__calendar_01.png" alt="" loading="lazy">
+      </picture>
+      <div class="p-calendar__description">
+        <span class="p-calendar__description-term">明け番</span>
+        <p class="p-calendar__description-text">1日に2日分働いた次の日の身体を休める日です。</p>
+      </div>
     </div>
-  </div>
   </div>
 
 
