workstyle: アイコン追加

--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -58,6 +58,9 @@
         <img src="images/environment/workStyle__calendar_01.png" alt="" loading="lazy">
       </picture>
       <div class="p-calendar__description">
+        <figure class="p-calendar__description-icon">
+        <img src="images/environment/home-icon.svg" alt="" >
+      </figure>
         <span class="p-calendar__description-term">明け番</span>
         <p class="p-calendar__description-text">1日に2日分働いた次の日の身体を休める日です。</p>
       </div>
