workstyle:ポイントタイトル作成

--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -59,10 +59,15 @@
       </picture>
       <div class="p-calendar__description">
         <figure class="p-calendar__description-icon">
-        <img src="images/environment/home-icon.svg" alt="" >
-      </figure>
+          <img src="images/environment/home-icon.svg" alt="">
+        </figure>
         <span class="p-calendar__description-term">明け番</span>
         <p class="p-calendar__description-text">1日に2日分働いた次の日の身体を休める日です。</p>
+      </div>
+    </div>
+    <div class="p-workStyle__points">
+      <div class="p-workStyle__titleWrapper">
+        <h3 class="p-yellowTitle p-yellowTitle--en">point</h3>
       </div>
     </div>
   </div>
