--- a/src/sass/object/project/_p-workStyle.scss
+++ b/src/sass/object/project/_p-workStyle.scss
@@ -32,6 +32,10 @@
   line-height: 1.75;
 }
 
+.p-yellowTitle--en {
+  text-transform: uppercase;
+}
+
 .p-workStyle__units {
   position: relative;
   margin-left: calc(50% - 50vw);
@@ -189,6 +193,7 @@
 
 .p-calendar__description {
   display: flex;
+  align-items: center;
 }
 
 .p-calendar__description-term::before {}
@@ -197,9 +202,10 @@
   display: block;
   // width: rem(12.5);
   // height: rem(12.5);
-  padding: rem(7) rem(5);
+  padding: rem(7) rem(7);
   border-radius: 50%;
   background-color: #02B5FD;
+  margin-right: rem(2);
 }
 
 
@@ -207,5 +213,28 @@
   width: rem(12.5);
   height: rem(12.5);
   max-width: initial;
-  filter: invert(99%) sepia(0%) saturate(2%) hue-rotate(355deg) brightness(109%) contrast(101%);
+  fill: #fff;
+}
+
+.p-calendar__description-term {
+  color: #02B5FD;
+  font-size: rem(14);
+  font-weight: bold;
+  line-height: 1.60714;
+}
+.p-calendar__description-term::after {
+  content: '・・';
+}
+.p-calendar__description-text {
+  font-size: rem(12);
+  line-height: 1.5;
+  
+  @include mq('md') {
+  font-size: rem(14);
+  line-height: 2.5714;
+  }
+}
+
+.p-workStyle__titleWrapper {
+  text-align: center;
 }
