--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -2,7 +2,7 @@
 
   <div class="p-workStyle__section-header">
     <h2 class="p-workStyle__title">隔日勤務/12日勤務</h2>
-    <span class="p-yellowTitle">時間を優先したい人の働き方</span>
+    <span class="p-workStyle__subtitle">時間を優先したい人の働き方</span>
   </div>
   <div class="p-workStyle__units">
     <div class="p-workStyle__unit">
@@ -68,6 +68,9 @@
     <div class="p-workStyle__points">
       <div class="p-workStyle__titleWrapper">
         <h3 class="p-yellowTitle p-yellowTitle--en">point</h3>
+      </div>
+      <div class="p-workStyle__pointsText">
+        休みは月に6日あります。月間で50万円以上稼ぐドライバーさんもおられるため、稼ぎたい人は頑張れば頑張るほど稼げる働き方です。休みたい曜日は自身で決めて頂きます。 決めて頂いた休みの翌日が2週間に1日休みになります。
       </div>
     </div>
   </div>
