--- a/src/sass/object/project/_p-workStyle.scss
+++ b/src/sass/object/project/_p-workStyle.scss
@@ -26,14 +26,13 @@
   background-color: $black;
 }
 
-.p-yellowTitle {
-  padding-top: rem(10);
+.p-workStyle__subtitle {
   font-size: rem(17.5);
   line-height: 1.75;
-}
-
-.p-yellowTitle--en {
-  text-transform: uppercase;
+  
+  @include mq('md') {
+  font-size: rem(20);
+  }
 }
 
 .p-workStyle__units {
@@ -237,4 +236,13 @@
 
 .p-workStyle__titleWrapper {
   text-align: center;
+}
+
+.p-workStyle__pointsText {
+  font-size: rem(15);
+  line-height: 2;
+  
+  @include mq('md') {
+  font-size: rem(18);
+  }
 }
