workstyle:タイトル名前変更

--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -1,8 +1,10 @@
 <div class="p-workStyle">
 
   <div class="p-workStyle__section-header">
-    <h2 class="p-workStyle__title">隔日勤務/12日勤務</h2>
-    <span class="p-workStyle__subtitle">時間を優先したい人の働き方</span>
+    <div class="c-fullTitle">
+      <h2 class="c-fullTitle__main">隔日勤務/12日勤務</h2>
+      <span class="c-fullTitle__sub">時間を優先したい人の働き方</span>
+    </div>
   </div>
   <div class="p-workStyle__units">
     <div class="p-workStyle__unit">
@@ -66,7 +68,7 @@
       </div>
     </div>
     <div class="p-workStyle__points">
-      <div class="p-workStyle__titleWrapper">
+      <div class="p-workStyle__pointsTitle">
         <h3 class="p-yellowTitle p-yellowTitle--en">point</h3>
       </div>
       <div class="p-workStyle__pointsText">
