--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -1,10 +1,10 @@
 <div class="p-workStyle">
 
   <div class="p-workStyle__section-header">
-    <div class="c-fullTitle">
-      <h2 class="c-fullTitle__main">隔日勤務/12日勤務</h2>
-      <span class="c-fullTitle__sub">時間を優先したい人の働き方</span>
-    </div>
+    <%- include('../component/_c-fullTitle',{
+      title:'隔日勤務/12日勤務',
+      subtitle:'時間を優先したい人の働き方'
+  }) %> 
   </div>
   <div class="p-workStyle__units">
     <div class="p-workStyle__unit">
