--- a/src/ejs/project/_p-environmentEntry.ejs
+++ b/src/ejs/project/_p-environmentEntry.ejs
@@ -1,1 +1,7 @@
-<div class="">エントリーボタンだよ</div>
+<div class="p-environmentEntry">
+  <div class="p-environmentEntry__btn">
+    <%- include('../component/_c-entryBtn2',{
+      link:'#'
+  }) %>
+  </div>
+</div>
