--- a/src/sass/object/project/_p-card.scss
+++ b/src/sass/object/project/_p-card.scss
@@ -10,19 +10,15 @@
   // position: relative;
   font-size: rem(24);
   line-height: 1.75;
-  
+
   @include mq('md') {
-  font-size: rem(30);
+    font-size: rem(30);
   }
 }
 
 .p-card__title::after {
   content: '';
   display: inline-block;
-  // position: absolute;
-  // left: 50%;
-  // bottom: rem(-24);
-  // transform: translateX(-50%);
   width: rem(250);
   height: rem(4);
   background-color: $yellow;
@@ -32,9 +28,10 @@
   padding-top: rem(24.5);
   font-size: rem(15);
   line-height: 1.86666;
-  
+
   @include mq('md') {
-  font-size: rem(20);
-  line-height: 2;
+    padding-top: rem(35);
+    font-size: rem(20);
+    line-height: 2;
   }
 }
