--- a/src/sass/object/project/_p-workStyle-links.scss
+++ b/src/sass/object/project/_p-workStyle-links.scss
@@ -10,6 +10,11 @@
   padding: rem(50) rem(10) rem(20);
   max-width: 100%;
   background-color: $yellow;
+
+  @include mq('md') {
+    width: rem(340);
+    padding: rem(100) rem(20) rem(40);
+  }
 }
 
 .p-workStyle-links_link::before {
@@ -22,6 +27,11 @@
   max-width: 100%;
   height: calc(100% - rem(10));
   border: 0.88px solid $black;
+
+  @include mq('md') {
+    width: calc(100% - rem(20));
+    height: calc(100% - rem(20));
+  }
 }
 
 .p-workStyle-links_link span {
@@ -34,6 +44,10 @@
   font-size: rem(16);
   font-weight: bold;
   line-height: 1.75;
+
+  @include mq('md') {
+    font-size: rem(32);
+  }
 }
 
 .p-workStyle-links_link-text::after {
@@ -45,11 +59,19 @@
   width: 100%;
   height: rem(1.69);
   background-color: $black;
+
+  @include mq('md') {
+    height: rem(3.38);
+  }
 }
 
 .p-workStyle-links_link-subText {
   font-size: rem(10);
   line-height: 1.75;
+
+  @include mq('md') {
+    font-size: rem(20);
+  }
 }
 
 .p-workStyle-links_link-arrow {
