--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -1,4 +1,4 @@
-<div class="p-workStyle">
+<div class="p-workStyle" id="12days">
 
   <div class="p-workStyle__section-header">
     <%- include('../component/_c-fullTitle',{
