links:クラス名変更

--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -10,10 +10,11 @@
   <section class="l-subMv">
     <%- include('./project/_p-subMv') %>
   </section>
-  <div class="l-workStyle-links">
-    <%- include('./project/_p-workStyle-links') %>
+  <div class="l-workStyleLinks">
+    <%- include('./project/_p-workStyleLinks') %>
   </div>
-  <section class="l-workStyle"><!-- =====12日勤務===== -->
+  <section class="l-workStyle">
+    <!-- =====12日勤務===== -->
     <%- include('./project/_p-workStyle') %>
   </section>
 
