--- a/src/sass/object/project/_p-workStyleLinks.scss
+++ b/src/sass/object/project/_p-workStyleLinks.scss
@@ -1,85 +1,5 @@
 @use "global"as *;
 
-
-
-.p-workStyleLink {
-  position: relative;
-  display: block;
-  width: rem(170);
-  padding: rem(50) rem(10) rem(20);
-  max-width: 100%;
-  background-color: $yellow;
-
-  @include mq('md') {
-    width: rem(340);
-    padding: rem(100) rem(20) rem(40);
-  }
-}
-
-.p-workStyleLink::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateY(-50%) translateX(-50%);
-  width: calc(100% - rem(10));
-  max-width: 100%;
-  height: calc(100% - rem(10));
-  border: 0.88px solid $black;
-
-  @include mq('md') {
-    width: calc(100% - rem(20));
-    height: calc(100% - rem(20));
-  }
-}
-
-.p-workStyleLink span {
-  display: block;
-  text-align: center;
-}
-
-.p-workStyleLink__text {
-  position: relative;
-  font-size: rem(16);
-  font-weight: bold;
-  line-height: 1.75;
-
-  @include mq('md') {
-    font-size: rem(32);
-  }
-}
-
-.p-workStyleLink__text::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: rem(-1);
-  width: 100%;
-  height: rem(1.69);
-  background-color: $black;
-
-  @include mq('md') {
-    height: rem(3.38);
-  }
-}
-
-.p-workStyleLink__subText {
-  font-size: rem(10);
-  line-height: 1.75;
-
-  @include mq('md') {
-    font-size: rem(20);
-  }
-}
-
-.p-workStyleLink__arrow {
-  width: rem(15);
-  height: rem(15);
-  margin: 0 auto;
-  border: 0;
-  border-top: solid 2px $black;
-  border-right: solid 2px $black;
-  transform: rotate(135deg);
-  margin-top: rem(28.5);
+.p-workStyleLinks__link {
+  
 }
