--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -10,19 +10,25 @@
   <section class="l-subMv">
     <%- include('./project/_p-subMv') %>
   </section>
-  <div class="l-workStyleLinks">
-    <%- include('./project/_p-workStyleLinks') %>
-  </div>
-  <section class="l-workStyle">
-    <!-- =====12日勤務===== -->
-    <%- include('./project/_p-workStyle') %>
-  </section>
+  <div class="l-subContets">
+    <div class="p-subContets">
+      <div class="p-subContets__inner">
+        <div class="l-workStyleLinks">
+          <%- include('./project/_p-workStyleLinks') %>
+        </div>
+        <section class="l-workStyle">
+          <!-- =====12日勤務===== -->
+          <%- include('./project/_p-workStyle') %>
+        </section>
 
-  <section class="l-environmentMmerit">
-    <%- include('./project/_p-environmentMmerit') %>
-  </section>
-  <div class="l-environmentEntry">
-    <%- include('./project/_p-environmentEntry') %>
+        <section class="l-environmentMmerit">
+          <%- include('./project/_p-environmentMmerit') %>
+        </section>
+        <div class="l-environmentEntry">
+          <%- include('./project/_p-environmentEntry') %>
+        </div>
+      </div>
+    </div>
   </div>
 </main>
 
