--- a/src/sass/object/project/_p-workStyleLinks.scss
+++ b/src/sass/object/project/_p-workStyleLinks.scss
@@ -10,11 +10,11 @@
 }
 
 .p-workStyleLinks__link {
-  width: calc(50% - rem() * 1 / 2);
+  width: calc(50% - rem(15) * 1 / 2);
   max-width: 100%;
 
 }
 
 .p-workStyleLinks__link:not(:nth-child(2n)) {
-  margin-right: rem(30);
+  margin-right: rem(15);
 }
