--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -10,8 +10,8 @@
   <section class="l-subMv">
     <%- include('./project/_p-subMv') %>
   </section>
-  <div class="l-workStyleLinks">
-    <%- include('./project/_p-workStyleLinks') %>
+  <div class="l-environmentLinks">
+    <%- include('./project/_p-environmentLinks') %>
   </div>
   <section class="l-workStyle">
     <!-- =====12日勤務===== -->
