--- a/src/sass/object/project/_p-environmentLinks.scss
+++ b/src/sass/object/project/_p-environmentLinks.scss
@@ -5,9 +5,7 @@
   flex-wrap: wrap;
 }
 
-.p-workStyleLinks__link {
-
-}
+.p-workStyleLinks__link {}
 
 .p-workStyleLinks__link {
   width: calc(50% - rem(15) * 1 / 2);
