--- a/src/sass/object/project/_p-workStyleLink.scss
+++ b/src/sass/object/project/_p-workStyleLink.scss
@@ -4,8 +4,8 @@
 .p-workStyleLink {
   position: relative;
   display: block;
-  width: rem(170);
-  padding: rem(50) rem(10) rem(20);
+  // width: rem(170);
+  padding: rem(50) rem(10) rem(24.25);
   max-width: 100%;
   background-color: $yellow;
 
