--- a/src/sass/object/project/_p-environmentLinks.scss
+++ b/src/sass/object/project/_p-environmentLinks.scss
@@ -1,18 +1,16 @@
 @use "global"as *;
 
-.p-workStyleLinks {
-  display: flex;
-  flex-wrap: wrap;
-}
+.p-environmentLinks__inner {
+  margin: 0 auto;
+  max-width: rem(540); //状況によって変える必要があるかも
+  width: 100%;
+  height: inherit;
+  padding-right: 12.5px;
+  padding-left: 12.5px;
 
-.p-workStyleLinks__link {}
-
-.p-workStyleLinks__link {
-  width: calc(50% - rem(15) * 1 / 2);
-  max-width: 100%;
-
-}
-
-.p-workStyleLinks__link:not(:nth-child(2n)) {
-  margin-right: rem(15);
+  @include mq(md) {
+    max-width: 1500px + strip-unit($padding-pc) * 2;
+    padding-right: $padding-pc;
+    padding-left: $padding-pc;
+  }
 }
