--- a/src/ejs/project/_p-environmentLinks.ejs
+++ b/src/ejs/project/_p-environmentLinks.ejs
@@ -11,22 +11,22 @@
         </div>
         <div class="p-workStyleLinks__link">
           <a href="#12days" class="p-workStyleLink">
-            <span class="p-workStyleLink__text">隔日勤務/12日勤務</span>
-            <span class="p-workStyleLink__subText">時間を優先したい人の働き方</span>
+            <span class="p-workStyleLink__text">夜勤勤務</span>
+            <span class="p-workStyleLink__subText">稼ぎたい人の働き方</span>
             <span class="p-workStyleLink__arrow"></span>
           </a>
         </div>
         <div class="p-workStyleLinks__link">
           <a href="#12days" class="p-workStyleLink">
-            <span class="p-workStyleLink__text">隔日勤務/12日勤務</span>
-            <span class="p-workStyleLink__subText">時間を優先したい人の働き方</span>
+            <span class="p-workStyleLink__text">2勤1休制/17日勤務</span>
+            <span class="p-workStyleLink__subText">女性の方が活躍されている働き方</span>
             <span class="p-workStyleLink__arrow"></span>
           </a>
         </div>
         <div class="p-workStyleLinks__link">
           <a href="#12days" class="p-workStyleLink">
-            <span class="p-workStyleLink__text">隔日勤務/12日勤務</span>
-            <span class="p-workStyleLink__subText">時間を優先したい人の働き方</span>
+            <span class="p-workStyleLink__text">その他メリット</span>
+            <span class="p-workStyleLink__subText">枚岡交通の社内環境</span>
             <span class="p-workStyleLink__arrow"></span>
           </a>
         </div>
