c-fulltitle.ejs:削除

--- a/src/ejs/project/_p-environmentMmerit.ejs
+++ b/src/ejs/project/_p-environmentMmerit.ejs
@@ -1,10 +1,10 @@
 <div class="p-environmentMmerit">
 
   <div class="p-environmentMmerit__section-header">
-    <%- include('../component/_c-fullTitle',{
-    title:'その他メリット',
-    subtitle:'枚岡交通の社内環境'
-}) %>
+    <div class="p-fullTitle">
+      <h2 class="p-fullTitle__main">その他メリット</h2>
+      <span class="p-fullTitle__sub">枚岡交通の社内環境</span>
+    </div>
   </div>
 
   <div class="p-card">
