--- a/src/ejs/project/_p-workStyle.ejs
+++ b/src/ejs/project/_p-workStyle.ejs
@@ -1,81 +1,81 @@
 <div class="p-workStyle" id="12days">
+  <div class="p-workStyle__inner">
 
-  <div class="p-workStyle__section-header">
-    <%- include('../component/_c-fullTitle',{
-      title:'隔日勤務/12日勤務',
-      subtitle:'時間を優先したい人の働き方'
-  }) %> 
-  </div>
-  <div class="p-workStyle__units">
-    <div class="p-workStyle__unit">
-      <img src="images/environment/workStyle_time730.png" alt="7:30">
-      <p class="p-workStyle__unitTitle">出社</p>
-      <p class="p-workStyle__unitText"> 6:00〜8:00の間で自由に出社時間を選べます。<br>
-        ・点検などの準備 </p>
-    </div>
-    <div class="p-workStyle__unit">
-      <img src="images/environment/workStyle_time800.png" alt="8:00">
-      <p class="p-workStyle__unitTitle">乗務開始</p>
-      <p class="p-workStyle__unitText">
-        ・点検が完了次第、乗務開始です<br>
-        ・待機場へ向かいます<br>
-        <span>無線配車数が業界トップクラス</span>
-        のため、無線だけでも安定した売上を上げられます。 </p>
-    </div>
-    <div class="p-workStyle__unit">
-      <img src="images/environment/workStyle_time800-1100.png" alt="8:00~11:00">
-      <p class="p-workStyle__unitTitle">午前のピークの時間</p>
-      <p class="p-workStyle__unitText"> 朝から昼前にかけては病院までお送りするお客様が多くいらっしゃる時間帯です。</p>
-    </div>
-    <div class="p-workStyle__unit">
-      <img src="images/environment/workStyle_time1200.png" alt="12:00">
-      <p class="p-workStyle__unitTitle">昼食</p>
-      <p class="p-workStyle__unitText"> 昼食の時間は決められておらず、自分の決めた好きなタイミングで昼食を取ります。 </p>
-    </div>
-    <div class="p-workStyle__unit">
-      <img src="images/environment/workStyle_time1500.png" alt="15:00">
-      <p class="p-workStyle__unitTitle">休憩</p>
-      <p class="p-workStyle__unitText"> 休憩は合計で3時間あります。自身で調整していただけます。</p>
-    </div>
-    <div class="p-workStyle__unit">
-      <img src="images/environment/workStyle_time1600-2000.png" alt="16:00~20:00">
-      <p class="p-workStyle__unitTitle">午後のピークの時間帯</p>
-      <p class="p-workStyle__unitText"> 夕方から夜にかけては、帰宅などご利用するお客様が多くいらっしゃる頑張る時間帯です。</p>
-    </div>
-    <div class="p-workStyle__unit">
-      <img src="images/environment/workStyle_time2530.png" alt="25:30">
-      <p class="p-workStyle__unitTitle">退社</p>
-      <p class="p-workStyle__unitText"> 23:00~26:00の間で出勤時間に応じて
-        退社します。</p>
-    </div>
-  </div>
-
-  <div class="p-workStyle__calendar p-calendar">
-    <div class="p-calendar__titleWrapper">
-      <h3 class="p-yellowTitle">1ヶ月の勤務イメージ</h3>
-    </div>
-    <div class="p-calendar__contents">
-      <picture class="p-calendar__calendarImg">
-        <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_01_pc.png" />
-        <img src="images/environment/workStyle__calendar_01.png" alt="" loading="lazy">
-      </picture>
-      <div class="p-calendar__description">
-        <figure class="p-calendar__description-icon">
-          <img src="images/environment/home-icon.svg" alt="">
-        </figure>
-        <span class="p-calendar__description-term">明け番</span>
-        <p class="p-calendar__description-text">1日に2日分働いた次の日の身体を休める日です。</p>
+    <div class="p-workStyle__section-header">
+      <div class="p-fullTitle">
+        <h2 class="p-fullTitle__main">隔日勤務/12日勤務</h2>
+        <span class="p-fullTitle__sub">時間を優先したい人の働き方</span>
       </div>
     </div>
-    <div class="p-workStyle__points">
-      <div class="p-workStyle__pointsTitle">
-        <h3 class="p-yellowTitle p-yellowTitle--en">point</h3>
+    <div class="p-workStyle__units">
+      <div class="p-workStyle__unit">
+        <img src="images/environment/workStyle_time730.png" alt="7:30">
+        <p class="p-workStyle__unitTitle">出社</p>
+        <p class="p-workStyle__unitText"> 6:00〜8:00の間で自由に出社時間を選べます。<br>
+          ・点検などの準備 </p>
       </div>
-      <div class="p-workStyle__pointsText">
-        休みは月に6日あります。月間で50万円以上稼ぐドライバーさんもおられるため、稼ぎたい人は頑張れば頑張るほど稼げる働き方です。休みたい曜日は自身で決めて頂きます。 決めて頂いた休みの翌日が2週間に1日休みになります。
+      <div class="p-workStyle__unit">
+        <img src="images/environment/workStyle_time800.png" alt="8:00">
+        <p class="p-workStyle__unitTitle">乗務開始</p>
+        <p class="p-workStyle__unitText">
+          ・点検が完了次第、乗務開始です<br>
+          ・待機場へ向かいます<br>
+          <span>無線配車数が業界トップクラス</span>
+          のため、無線だけでも安定した売上を上げられます。 </p>
+      </div>
+      <div class="p-workStyle__unit">
+        <img src="images/environment/workStyle_time800-1100.png" alt="8:00~11:00">
+        <p class="p-workStyle__unitTitle">午前のピークの時間</p>
+        <p class="p-workStyle__unitText"> 朝から昼前にかけては病院までお送りするお客様が多くいらっしゃる時間帯です。</p>
+      </div>
+      <div class="p-workStyle__unit">
+        <img src="images/environment/workStyle_time1200.png" alt="12:00">
+        <p class="p-workStyle__unitTitle">昼食</p>
+        <p class="p-workStyle__unitText"> 昼食の時間は決められておらず、自分の決めた好きなタイミングで昼食を取ります。 </p>
+      </div>
+      <div class="p-workStyle__unit">
+        <img src="images/environment/workStyle_time1500.png" alt="15:00">
+        <p class="p-workStyle__unitTitle">休憩</p>
+        <p class="p-workStyle__unitText"> 休憩は合計で3時間あります。自身で調整していただけます。</p>
+      </div>
+      <div class="p-workStyle__unit">
+        <img src="images/environment/workStyle_time1600-2000.png" alt="16:00~20:00">
+        <p class="p-workStyle__unitTitle">午後のピークの時間帯</p>
+        <p class="p-workStyle__unitText"> 夕方から夜にかけては、帰宅などご利用するお客様が多くいらっしゃる頑張る時間帯です。</p>
+      </div>
+      <div class="p-workStyle__unit">
+        <img src="images/environment/workStyle_time2530.png" alt="25:30">
+        <p class="p-workStyle__unitTitle">退社</p>
+        <p class="p-workStyle__unitText"> 23:00~26:00の間で出勤時間に応じて
+          退社します。</p>
+      </div>
+    </div>
+
+    <div class="p-workStyle__calendar p-calendar">
+      <div class="p-calendar__titleWrapper">
+        <h3 class="p-yellowTitle">1ヶ月の勤務イメージ</h3>
+      </div>
+      <div class="p-calendar__contents">
+        <picture class="p-calendar__calendarImg">
+          <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_01_pc.png" />
+          <img src="images/environment/workStyle__calendar_01.png" alt="" loading="lazy">
+        </picture>
+        <div class="p-calendar__description">
+          <figure class="p-calendar__description-icon">
+            <img src="images/environment/home-icon.svg" alt="">
+          </figure>
+          <span class="p-calendar__description-term">明け番</span>
+          <p class="p-calendar__description-text">1日に2日分働いた次の日の身体を休める日です。</p>
+        </div>
+      </div>
+      <div class="p-workStyle__points">
+        <div class="p-workStyle__pointsTitle">
+          <h3 class="p-yellowTitle p-yellowTitle--en">point</h3>
+        </div>
+        <div class="p-workStyle__pointsText">
+          休みは月に6日あります。月間で50万円以上稼ぐドライバーさんもおられるため、稼ぎたい人は頑張れば頑張るほど稼げる働き方です。休みたい曜日は自身で決めて頂きます。 決めて頂いた休みの翌日が2週間に1日休みになります。
+        </div>
       </div>
     </div>
   </div>
-
-
 </div>
