--- a/src/sass/object/project/_p-workStyle.scss
+++ b/src/sass/object/project/_p-workStyle.scss
@@ -1,5 +1,19 @@
 @use "global"as *;
 
+.p-workStyle__inner {
+  margin: 0 auto;
+	max-width: rem(540); //状況によって変える必要があるかも
+	width: 100%;
+	height: inherit;
+	padding-right: $padding-sp;
+	padding-left: $padding-sp;
+	@include mq(md) {
+		max-width: 1200px + strip-unit($padding-pc) * 2;
+		padding-right: $padding-pc;
+		padding-left: $padding-pc;
+	}
+}
+
 .p-workStyle__units {
   position: relative;
   margin-left: calc(50% - 50vw);
