--- a/src/sass/object/project/_p-yellowTitle.scss
+++ b/src/sass/object/project/_p-yellowTitle.scss
@@ -1,10 +1,17 @@
 
 @use "global"as *;
 
+
 .p-yellowTitle {
-  padding-top: rem(10);
-  font-size: rem(17.5);
+  display: inline-block;
+  background-color: $yellow;
+  padding: 0 rem(4.4);
+  font-size: rem(18.72);
   line-height: 1.75;
+
+  @include mq('md') {
+    font-size: rem(26);
+  }
 }
 
 .p-yellowTitle--en {
