--- a/src/ejs/project/_p-environmentMerit.ejs
+++ b/src/ejs/project/_p-environmentMerit.ejs
@@ -6,10 +6,15 @@
         <span class="p-fullTitle__sub">枚岡交通の社内環境</span>
       </div>
     </div>
-
-    <div class="p-card">
-      <h3 class="p-card__title">風通しの良い環境</h3>
-      <p class="p-card__text">会社内の人間関係で程よい距離感で接することができます。部署間の壁がなく、親しみやすいアットホームな雰囲気の会社です。</p>
+    <div class="p-environmentMerit__yellowLineCards">
+      <div class="p-yellowLineCards">
+        <div class="p-yellowLinecards__card">
+          <div class="p-yellowLineCard">
+            <h3 class="p-yellowLineCard__title">風通しの良い環境</h3>
+            <p class="p-yellowLineCard__text">会社内の人間関係で程よい距離感で接することができます。部署間の壁がなく、親しみやすいアットホームな雰囲気の会社です。</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
