--- a/src/sass/object/project/_p-environmentMerit.scss
+++ b/src/sass/object/project/_p-environmentMerit.scss
@@ -15,3 +15,12 @@
     padding-left: $padding-pc;
   }
 }
+
+.p-environmentMerit__yellowLineCards {
+  margin-top: rem(67);
+}
+
+// .p-environmentMerit__cards {
+//   max-width: rem(280);
+//   margin: 0 auto;
+//   }
