--- a/src/sass/object/project/_yellowLineCards.scss
+++ b/src/sass/object/project/_yellowLineCards.scss
@@ -1,6 +1,6 @@
 @use "global"as *;
 
-.p-card__title {
+.p-yellowLineCard__title {
   display: inline-flex;
   display: flex;
   justify-content: center;
@@ -15,7 +15,7 @@
   }
 }
 
-.p-card__title::after {
+.p-yellowLineCard__title::after {
   content: '';
   display: inline-block;
   width: rem(250);
@@ -23,7 +23,7 @@
   background-color: $yellow;
 }
 
-.p-card__text {
+.p-yellowLineCard__text {
   padding-top: rem(24.5);
   font-size: rem(15);
   line-height: 1.86666;
