--- a/src/ejs/project/_p-environmentMerit.ejs
+++ b/src/ejs/project/_p-environmentMerit.ejs
@@ -7,14 +7,60 @@
       </div>
     </div>
     <div class="p-environmentMerit__yellowLineCards">
-      <div class="p-yellowLineCards">
-        <div class="p-yellowLinecards__card">
+      <ul class="p-yellowLineCards">
+        <li class="p-yellowLinecards__card">
           <div class="p-yellowLineCard">
             <h3 class="p-yellowLineCard__title">風通しの良い環境</h3>
             <p class="p-yellowLineCard__text">会社内の人間関係で程よい距離感で接することができます。部署間の壁がなく、親しみやすいアットホームな雰囲気の会社です。</p>
           </div>
-        </div>
-      </div>
+        </li>
+        <li class="p-yellowLinecards__card">
+          <div class="p-yellowLineCard">
+            <h3 class="p-yellowLineCard__title">安心と安全</h3>
+            <p class="p-yellowLineCard__text">事故対応は会社がするため、交渉など行わなくても大丈夫です。事故の際の保障制度もあります。</p>
+          </div>
+        </li>
+        <li class="p-yellowLinecards__card">
+          <div class="p-yellowLineCard">
+            <h3 class="p-yellowLineCard__title">労働環境向上の取組み</h3>
+            <p class="p-yellowLineCard__text">乗務員の労働環境を改善するために、各拠点の班長が集まって毎月話し合いを行います。</p>
+          </div>
+        </li>
+        <li class="p-yellowLinecards__card">
+          <div class="p-yellowLineCard">
+            <h3 class="p-yellowLineCard__title">研修期間の給与補償</h3>
+            <p class="p-yellowLineCard__text">免許の取得から仕事に慣れるまでの2ヶ月間は、日給1万円を支給するため、安心してお仕事がスタートできます。</p>
+          </div>
+        </li>
+        <li class="p-yellowLinecards__card">
+          <div class="p-yellowLineCard">
+            <h3 class="p-yellowLineCard__title">
+              自分の給料を<br>
+              設定できる</h3>
+            <p class="p-yellowLineCard__text">どれくらいの売上を達成すると、どれくらいの給料になるかが明確なため、自身で目標を決めて取り組むことができます。</p>
+          </div>
+        </li>
+        <li class="p-yellowLinecards__card">
+          <div class="p-yellowLineCard">
+            <h3 class="p-yellowLineCard__title">社会保険完備</h3>
+            <p class="p-yellowLineCard__text">自営業のような働き方ですが、社会保険・厚生年金も完備しています。</p>
+          </div>
+        </li>
+        <li class="p-yellowLinecards__card">
+          <div class="p-yellowLineCard">
+            <h3 class="p-yellowLineCard__title">
+              二種免許取得費用<br>
+              支援制度あり</h3>
+            <p class="p-yellowLineCard__text">会社内の人間関係で程よい距離感で接することができます。部署間の壁がなく、親しみやすいアットホームな雰囲気の会社です。</p>
+          </div>
+        </li>
+        <li class="p-yellowLinecards__card">
+          <div class="p-yellowLineCard">
+            <h3 class="p-yellowLineCard__title">制服貸与</h3>
+            <p class="p-yellowLineCard__text">制服は採寸し、自分にピッタリのサイズの制服を貸し出します。</p>
+          </div>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
