--- a/src/ejs/project/_p-environmentMerit.ejs
+++ b/src/ejs/project/_p-environmentMerit.ejs
@@ -9,7 +9,7 @@
     <div class="p-environmentMerit__yellowLineCards">
       <ul class="p-yellowLineCards">
         <li class="p-yellowLinecards__card">
-          <div class="p-yellowLineCard">
+          <div class="c">
             <h3 class="p-yellowLineCard__title">風通しの良い環境</h3>
             <p class="p-yellowLineCard__text">会社内の人間関係で程よい距離感で接することができます。部署間の壁がなく、親しみやすいアットホームな雰囲気の会社です。</p>
           </div>
