--- a/src/sass/object/layout/_l-workStyle.scss
+++ b/src/sass/object/layout/_l-workStyle.scss
@@ -2,8 +2,16 @@
 
 .l-workStyle {
   margin-top: rem(25);
+
+  @include mq('md') {
+  margin-top: rem(120);
+  }
 }
 
 .l-workStyle + .l-workStyle {
   margin-top: rem(100);
+
+  @include mq('md') {
+    margin-top: rem(150);
+  }
 }
