カレンダー：画像差し変え

--- a/src/sass/object/project/_p-workStyleLink.scss
+++ b/src/sass/object/project/_p-workStyleLink.scss
@@ -10,7 +10,7 @@
   background-color: $yellow;
 
   @include mq('md') {
-    width: rem(340);
+    // width: rem(340);
     padding: rem(100) rem(20) rem(40);
   }
 }
