calendar/entry:余白調整

--- a/src/ejs/project/_p-environmentEntry.ejs
+++ b/src/ejs/project/_p-environmentEntry.ejs
@@ -1,7 +1,9 @@
 <div class="p-environmentEntry">
-  <div class="p-environmentEntry__btn">
-    <%- include('../component/_c-entryBtn2',{
+  <div class="p-environmentEntry__inner">
+    <div class="p-environmentEntry__btn">
+      <%- include('../component/_c-entryBtn2',{
       link:'#'
   }) %>
+    </div>
   </div>
 </div>
