--- a/src/sass/object/project/_p-workStyle.scss
+++ b/src/sass/object/project/_p-workStyle.scss
@@ -169,7 +169,10 @@
 }
 
 .p-workStyle__unit:nth-child(even) .p-workStyle__unitText {
-  padding: 0;
+
+  @include mq('md') {
+    padding: 0;
+  }
 }
 
 
