--- a/src/sass/object/project/_p-calendar.scss
+++ b/src/sass/object/project/_p-calendar.scss
@@ -37,19 +37,21 @@
 
 .p-calendar__description-icon {
   display: block;
-  // width: rem(12.5);
-  // height: rem(12.5);
+  max-width: rem(31);
   padding: rem(7) rem(7);
   border-radius: 50%;
   background-color: #02B5FD;
   margin-right: rem(2);
+
+  @include mq('md') {
+    max-width: rem(30);
+  }
 }
 
 
 .p-calendar__description-icon img {
   width: rem(12.5);
   height: rem(12.5);
-  max-width: initial;
   fill: #fff;
 
   @include mq('md') {
@@ -59,21 +61,28 @@
 }
 
 .p-calendar__description-term {
+  min-width: rem(56);
   color: #02B5FD;
   font-size: rem(14);
   font-weight: bold;
   line-height: 1.60714;
+
+  @include mq('md') {
+    min-width: rem(64);
+  }
 }
 
 .p-calendar__description-term::after {
-  content: '・・';
+  content: '‥';
 }
 
 .p-calendar__description-text {
+  // max-width: rem(231);
   font-size: rem(12);
   line-height: 1.5;
 
   @include mq('md') {
+    max-width: initial;
     font-size: rem(14);
     line-height: 2.5714;
   }
